--- a/11-jQuery/jQuery Animations/index.html
+++ b/11-jQuery/jQuery Animations/index.html
@@ -8,7 +8,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="h-screen w-screen flex flex-col justify-center items-center bg-gradient-to-r from-indigo-500">
-
+    <div id="app"></div>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="./index.js"></script>
 </body>
