--- a/preentrega3/index.html
+++ b/preentrega3/index.html
@@ -23,13 +23,13 @@
     </ul>
     <section class="menu border">
 
-        <h2>Bienvenido a TuMascoDog <svg id="carrito" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-123" viewBox="0 0 16 16">
+        <h2 class="dog">Bienvenido a TuMascoDog <svg id="carrito" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-123" viewBox="0 0 16 16">
             <path d="M2.873 11.297V4.142H1.699L0 5.379v1.137l1.64-1.18h.06v5.961h1.174Zm3.213-5.09v-.063c0-.618.44-1.169 1.196-1.169.676 0 1.174.44 1.174 1.106 0 .624-.42 1.101-.807 1.526L4.99 10.553v.744h4.78v-.99H6.643v-.069L8.41 8.252c.65-.724 1.237-1.332 1.237-2.27C9.646 4.849 8.723 4 7.308 4c-1.573 0-2.36 1.064-2.36 2.15v.057h1.138Zm6.559 1.883h.786c.823 0 1.374.481 1.379 1.179.01.707-.55 1.216-1.421 1.21-.77-.005-1.326-.419-1.379-.953h-1.095c.042 1.053.938 1.918 2.464 1.918 1.478 0 2.642-.839 2.62-2.144-.02-1.143-.922-1.651-1.551-1.714v-.063c.535-.09 1.347-.66 1.326-1.678-.026-1.053-.933-1.855-2.359-1.845-1.5.005-2.317.88-2.348 1.898h1.116c.032-.498.498-.944 1.206-.944.703 0 1.206.435 1.206 1.07.005.64-.504 1.106-1.2 1.106h-.75v.96Z"/>
           </svg></h2>
         <form>
             <input type="text" placeholder="Busca tu producto Aqui">
         </form>
-        <p class=".miCuenta"> <a href="#"> Mi cuenta</a></p>
+        <p class=".miCuenta"> Mi cuenta</p>
         <p class="compras"><span class="nroCompras">0</span> <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart" viewBox="0 0 16 16">
             <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l1.313 7h8.17l1.313-7H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
           </svg>   <span class="precioMas"> 0 $</span></p>
@@ -42,11 +42,25 @@
             <li>Promociones</li>
             <li>Ofertas</li>
             <li>Servicios</li>
-            <li>Envios Programados</li>
+            <li class="vacio">Vaciar Carrito</li>
         </ul>
 
     <section class="seccion">
 
+        <div class="mainMoscu">
+
+            <img src="./assets/1.jpeg" class="moscuI" alt="">
+            <img src="./assets/2.jpeg" class="moscuI" alt="">
+            <img src="./assets/3.jpeg" class="moscuI" alt="">
+            <img src="./assets/4.jpeg" class="moscuI" alt="">
+            <img src="./assets/5.jpeg" class="moscuI" alt="">
+            <img src="./assets/6.jpeg" class="moscuI" alt="">
+            <img src="./assets/7.jpeg" class="moscuI" alt="">
+            <img src="./assets/8.jpeg" class="moscuI" alt="">
+            <img src="./assets/9.jpeg" class="moscuI" alt="">
+            <img src="./assets/10.jpeg" class="moscuI" alt="">
+    
+        </div>
         
 
     </section>
